Package_Tools/include_C/sdl3/include/SDL3/in_arbeit/fertig/SDL_render.h


typedef struct SDL_Vertex
{
    SDL_FPoint position;        
    SDL_FColor color;           
    SDL_FPoint tex_coord;       
} SDL_Vertex;
typedef enum SDL_RendererLogicalPresentation
{
    SDL_LOGICAL_PRESENTATION_DISABLED,  
    SDL_LOGICAL_PRESENTATION_STRETCH,   
    SDL_LOGICAL_PRESENTATION_LETTERBOX, 
    SDL_LOGICAL_PRESENTATION_OVERSCAN,  
    SDL_LOGICAL_PRESENTATION_INTEGER_SCALE   
} SDL_RendererLogicalPresentation;
typedef struct SDL_Renderer SDL_Renderer;
struct SDL_Texture
{
    SDL_PixelFormat format;     
    int w;                      
    int h;                      
    int refcount;               
};
typedef struct SDL_Texture SDL_Texture;
extern  SDL_Renderer *  SDL_GetRendererFromTexture(SDL_Texture *texture);
extern  bool  SDL_GetTextureSize(SDL_Texture *texture, float *w, float *h);
extern  bool  SDL_SetTextureColorMod(SDL_Texture *texture, Uint8 r, Uint8 g, Uint8 b);
extern  bool  SDL_SetTextureColorModFloat(SDL_Texture *texture, float r, float g, float b);
extern  bool  SDL_GetTextureColorMod(SDL_Texture *texture, Uint8 *r, Uint8 *g, Uint8 *b);
extern  bool  SDL_GetTextureColorModFloat(SDL_Texture *texture, float *r, float *g, float *b);
extern  bool  SDL_SetTextureAlphaMod(SDL_Texture *texture, Uint8 alpha);
extern  bool  SDL_SetTextureAlphaModFloat(SDL_Texture *texture, float alpha);
extern  bool  SDL_GetTextureAlphaMod(SDL_Texture *texture, Uint8 *alpha);
extern  bool  SDL_GetTextureAlphaModFloat(SDL_Texture *texture, float *alpha);
extern  bool  SDL_SetTextureBlendMode(SDL_Texture *texture, SDL_BlendMode blendMode);
extern  bool  SDL_GetTextureBlendMode(SDL_Texture *texture, SDL_BlendMode *blendMode);
extern  bool  SDL_SetTextureScaleMode(SDL_Texture *texture, SDL_ScaleMode scaleMode);
extern  bool  SDL_GetTextureScaleMode(SDL_Texture *texture, SDL_ScaleMode *scaleMode);
extern  bool  SDL_UpdateTexture(SDL_Texture *texture, const SDL_Rect *rect, const void *pixels, int pitch);
extern  bool  SDL_UpdateYUVTexture(SDL_Texture *texture,
                                                 const SDL_Rect *rect,
                                                 const Uint8 *Yplane, int Ypitch,
                                                 const Uint8 *Uplane, int Upitch,
                                                 const Uint8 *Vplane, int Vpitch);
extern  bool  SDL_UpdateNVTexture(SDL_Texture *texture,
                                                 const SDL_Rect *rect,
                                                 const Uint8 *Yplane, int Ypitch,
                                                 const Uint8 *UVplane, int UVpitch);
extern  bool  SDL_LockTexture(SDL_Texture *texture,
                                            const SDL_Rect *rect,
                                            void **pixels, int *pitch);
extern  bool  SDL_LockTextureToSurface(SDL_Texture *texture, const SDL_Rect *rect, SDL_Surface **surface);
extern  void  SDL_UnlockTexture(SDL_Texture *texture);
extern  bool  SDL_SetRenderTarget(SDL_Renderer *renderer, SDL_Texture *texture);
extern  SDL_Texture *  SDL_GetRenderTarget(SDL_Renderer *renderer);
extern  bool  SDL_SetRenderLogicalPresentation(SDL_Renderer *renderer, int w, int h, SDL_RendererLogicalPresentation mode);
extern  bool  SDL_GetRenderLogicalPresentation(SDL_Renderer *renderer, int *w, int *h, SDL_RendererLogicalPresentation *mode);
extern  bool  SDL_GetRenderLogicalPresentationRect(SDL_Renderer *renderer, SDL_FRect *rect);
extern  bool  SDL_RenderCoordinatesFromWindow(SDL_Renderer *renderer, float window_x, float window_y, float *x, float *y);
extern  bool  SDL_RenderCoordinatesToWindow(SDL_Renderer *renderer, float x, float y, float *window_x, float *window_y);
extern  bool  SDL_ConvertEventToRenderCoordinates(SDL_Renderer *renderer, SDL_Event *event);
extern  bool  SDL_SetRenderViewport(SDL_Renderer *renderer, const SDL_Rect *rect);
extern  bool  SDL_GetRenderViewport(SDL_Renderer *renderer, SDL_Rect *rect);
extern  bool  SDL_RenderViewportSet(SDL_Renderer *renderer);
extern  bool  SDL_GetRenderSafeArea(SDL_Renderer *renderer, SDL_Rect *rect);
extern  bool  SDL_SetRenderClipRect(SDL_Renderer *renderer, const SDL_Rect *rect);
extern  bool  SDL_GetRenderClipRect(SDL_Renderer *renderer, SDL_Rect *rect);
extern  bool  SDL_RenderClipEnabled(SDL_Renderer *renderer);
extern  bool  SDL_SetRenderScale(SDL_Renderer *renderer, float scaleX, float scaleY);
extern  bool  SDL_GetRenderScale(SDL_Renderer *renderer, float *scaleX, float *scaleY);
extern  bool  SDL_SetRenderDrawColor(SDL_Renderer *renderer, Uint8 r, Uint8 g, Uint8 b, Uint8 a);
extern  bool  SDL_SetRenderDrawColorFloat(SDL_Renderer *renderer, float r, float g, float b, float a);
extern  bool  SDL_GetRenderDrawColor(SDL_Renderer *renderer, Uint8 *r, Uint8 *g, Uint8 *b, Uint8 *a);
extern  bool  SDL_GetRenderDrawColorFloat(SDL_Renderer *renderer, float *r, float *g, float *b, float *a);
extern  bool  SDL_SetRenderColorScale(SDL_Renderer *renderer, float scale);
extern  bool  SDL_GetRenderColorScale(SDL_Renderer *renderer, float *scale);
extern  bool  SDL_SetRenderDrawBlendMode(SDL_Renderer *renderer, SDL_BlendMode blendMode);
extern  bool  SDL_GetRenderDrawBlendMode(SDL_Renderer *renderer, SDL_BlendMode *blendMode);
extern  bool  SDL_RenderClear(SDL_Renderer *renderer);
extern  bool  SDL_RenderPoint(SDL_Renderer *renderer, float x, float y);
extern  bool  SDL_RenderPoints(SDL_Renderer *renderer, const SDL_FPoint *points, int count);
extern  bool  SDL_RenderLine(SDL_Renderer *renderer, float x1, float y1, float x2, float y2);
extern  bool  SDL_RenderLines(SDL_Renderer *renderer, const SDL_FPoint *points, int count);
extern  bool  SDL_RenderRect(SDL_Renderer *renderer, const SDL_FRect *rect);
extern  bool  SDL_RenderRects(SDL_Renderer *renderer, const SDL_FRect *rects, int count);
extern  bool  SDL_RenderFillRect(SDL_Renderer *renderer, const SDL_FRect *rect);
extern  bool  SDL_RenderFillRects(SDL_Renderer *renderer, const SDL_FRect *rects, int count);
extern  bool  SDL_RenderTexture(SDL_Renderer *renderer, SDL_Texture *texture, const SDL_FRect *srcrect, const SDL_FRect *dstrect);
extern  bool  SDL_RenderTextureRotated(SDL_Renderer *renderer, SDL_Texture *texture,
                                                     const SDL_FRect *srcrect, const SDL_FRect *dstrect,
                                                     double angle, const SDL_FPoint *center,
                                                     SDL_FlipMode flip);
extern  bool  SDL_RenderTextureTiled(SDL_Renderer *renderer, SDL_Texture *texture, const SDL_FRect *srcrect, float scale, const SDL_FRect *dstrect);
extern  bool  SDL_RenderTexture9Grid(SDL_Renderer *renderer, SDL_Texture *texture, const SDL_FRect *srcrect, float left_width, float right_width, float top_height, float bottom_height, float scale, const SDL_FRect *dstrect);
extern  bool  SDL_RenderGeometry(SDL_Renderer *renderer,
                                               SDL_Texture *texture,
                                               const SDL_Vertex *vertices, int num_vertices,
                                               const int *indices, int num_indices);
extern  bool  SDL_RenderGeometryRaw(SDL_Renderer *renderer,
                                               SDL_Texture *texture,
                                               const float *xy, int xy_stride,
                                               const SDL_FColor *color, int color_stride,
                                               const float *uv, int uv_stride,
                                               int num_vertices,
                                               const void *indices, int num_indices, int size_indices);
extern  SDL_Surface *  SDL_RenderReadPixels(SDL_Renderer *renderer, const SDL_Rect *rect);
extern  bool  SDL_RenderPresent(SDL_Renderer *renderer);
extern  void  SDL_DestroyTexture(SDL_Texture *texture);
extern  void  SDL_DestroyRenderer(SDL_Renderer *renderer);
extern  bool  SDL_FlushRenderer(SDL_Renderer *renderer);
extern  void *  SDL_GetRenderMetalLayer(SDL_Renderer *renderer);
extern  void *  SDL_GetRenderMetalCommandEncoder(SDL_Renderer *renderer);
extern  bool  SDL_AddVulkanRenderSemaphores(SDL_Renderer *renderer, Uint32 wait_stage_mask, Sint64 wait_semaphore, Sint64 signal_semaphore);
extern  bool  SDL_SetRenderVSync(SDL_Renderer *renderer, int vsync);
#define SDL_RENDERER_VSYNC_DISABLED 0
#define SDL_RENDERER_VSYNC_ADAPTIVE (-1)
extern  bool  SDL_GetRenderVSync(SDL_Renderer *renderer, int *vsync);
#define SDL_DEBUG_TEXT_FONT_CHARACTER_SIZE 8
extern  bool  SDL_RenderDebugText(SDL_Renderer *renderer, float x, float y, const char *str);