packages/SDL3/SDL_render.inc


function SDL_GetRendererFromTexture(texture: PSDL_Texture): PSDL_Renderer; cdecl; external libSDL3;
function SDL_GetTextureSize(texture: PSDL_Texture; w: Psingle; h: Psingle): Tbool; cdecl; external libSDL3;
function SDL_SetTextureColorMod(texture: PSDL_Texture; r: TUint8; g: TUint8; b: TUint8): Tbool; cdecl; external libSDL3;
function SDL_SetTextureColorModFloat(texture: PSDL_Texture; r: single; g: single; b: single): Tbool; cdecl; external libSDL3;
function SDL_GetTextureColorMod(texture: PSDL_Texture; r: PUint8; g: PUint8; b: PUint8): Tbool; cdecl; external libSDL3;
function SDL_GetTextureColorModFloat(texture: PSDL_Texture; r: Psingle; g: Psingle; b: Psingle): Tbool; cdecl; external libSDL3;
function SDL_SetTextureAlphaMod(texture: PSDL_Texture; alpha: TUint8): Tbool; cdecl; external libSDL3;
function SDL_SetTextureAlphaModFloat(texture: PSDL_Texture; alpha: single): Tbool; cdecl; external libSDL3;
function SDL_GetTextureAlphaMod(texture: PSDL_Texture; alpha: PUint8): Tbool; cdecl; external libSDL3;
function SDL_GetTextureAlphaModFloat(texture: PSDL_Texture; alpha: Psingle): Tbool; cdecl; external libSDL3;
function SDL_SetTextureBlendMode(texture: PSDL_Texture; blendMode: TSDL_BlendMode): Tbool; cdecl; external libSDL3;
function SDL_GetTextureBlendMode(texture: PSDL_Texture; blendMode: PSDL_BlendMode): Tbool; cdecl; external libSDL3;
function SDL_SetTextureScaleMode(texture: PSDL_Texture; scaleMode: TSDL_ScaleMode): Tbool; cdecl; external libSDL3;
function SDL_GetTextureScaleMode(texture: PSDL_Texture; scaleMode: PSDL_ScaleMode): Tbool; cdecl; external libSDL3;
function SDL_UpdateTexture(texture: PSDL_Texture; rect: PSDL_Rect; pixels: pointer; pitch: longint): Tbool; cdecl; external libSDL3;
function SDL_UpdateYUVTexture(texture: PSDL_Texture; rect: PSDL_Rect; Yplane: PUint8; Ypitch: longint; Uplane: PUint8;
  Upitch: longint; Vplane: PUint8; Vpitch: longint): Tbool; cdecl; external libSDL3;
function SDL_UpdateNVTexture(texture: PSDL_Texture; rect: PSDL_Rect; Yplane: PUint8; Ypitch: longint; UVplane: PUint8;
  UVpitch: longint): Tbool; cdecl; external libSDL3;
function SDL_LockTexture(texture: PSDL_Texture; rect: PSDL_Rect; pixels: Ppointer; pitch: Plongint): Tbool; cdecl; external libSDL3;
function SDL_LockTextureToSurface(texture: PSDL_Texture; rect: PSDL_Rect; surface: PPSDL_Surface): Tbool; cdecl; external libSDL3;
procedure SDL_UnlockTexture(texture: PSDL_Texture); cdecl; external libSDL3;
function SDL_SetRenderTarget(renderer: PSDL_Renderer; texture: PSDL_Texture): Tbool; cdecl; external libSDL3;
function SDL_GetRenderTarget(renderer: PSDL_Renderer): PSDL_Texture; cdecl; external libSDL3;
function SDL_SetRenderLogicalPresentation(renderer: PSDL_Renderer; w: longint; h: longint; mode: TSDL_RendererLogicalPresentation): Tbool; cdecl; external libSDL3;
function SDL_GetRenderLogicalPresentation(renderer: PSDL_Renderer; w: Plongint; h: Plongint; mode: PSDL_RendererLogicalPresentation): Tbool; cdecl; external libSDL3;
function SDL_GetRenderLogicalPresentationRect(renderer: PSDL_Renderer; rect: PSDL_FRect): Tbool; cdecl; external libSDL3;
function SDL_RenderCoordinatesFromWindow(renderer: PSDL_Renderer; window_x: single; window_y: single; x: Psingle; y: Psingle): Tbool; cdecl; external libSDL3;
function SDL_RenderCoordinatesToWindow(renderer: PSDL_Renderer; x: single; y: single; window_x: Psingle; window_y: Psingle): Tbool; cdecl; external libSDL3;
function SDL_ConvertEventToRenderCoordinates(renderer: PSDL_Renderer; event: PSDL_Event): Tbool; cdecl; external libSDL3;
function SDL_SetRenderViewport(renderer: PSDL_Renderer; rect: PSDL_Rect): Tbool; cdecl; external libSDL3;
function SDL_GetRenderViewport(renderer: PSDL_Renderer; rect: PSDL_Rect): Tbool; cdecl; external libSDL3;
function SDL_RenderViewportSet(renderer: PSDL_Renderer): Tbool; cdecl; external libSDL3;
function SDL_GetRenderSafeArea(renderer: PSDL_Renderer; rect: PSDL_Rect): Tbool; cdecl; external libSDL3;
function SDL_SetRenderClipRect(renderer: PSDL_Renderer; rect: PSDL_Rect): Tbool; cdecl; external libSDL3;
function SDL_GetRenderClipRect(renderer: PSDL_Renderer; rect: PSDL_Rect): Tbool; cdecl; external libSDL3;
function SDL_RenderClipEnabled(renderer: PSDL_Renderer): Tbool; cdecl; external libSDL3;
function SDL_SetRenderScale(renderer: PSDL_Renderer; scaleX: single; scaleY: single): Tbool; cdecl; external libSDL3;
function SDL_GetRenderScale(renderer: PSDL_Renderer; scaleX: Psingle; scaleY: Psingle): Tbool; cdecl; external libSDL3;
function SDL_SetRenderDrawColor(renderer: PSDL_Renderer; r: TUint8; g: TUint8; b: TUint8; a: TUint8): Tbool; cdecl; external libSDL3;
function SDL_SetRenderDrawColorFloat(renderer: PSDL_Renderer; r: single; g: single; b: single; a: single): Tbool; cdecl; external libSDL3;
function SDL_GetRenderDrawColor(renderer: PSDL_Renderer; r: PUint8; g: PUint8; b: PUint8; a: PUint8): Tbool; cdecl; external libSDL3;
function SDL_GetRenderDrawColorFloat(renderer: PSDL_Renderer; r: Psingle; g: Psingle; b: Psingle; a: Psingle): Tbool; cdecl; external libSDL3;
function SDL_SetRenderColorScale(renderer: PSDL_Renderer; scale: single): Tbool; cdecl; external libSDL3;
function SDL_GetRenderColorScale(renderer: PSDL_Renderer; scale: Psingle): Tbool; cdecl; external libSDL3;
function SDL_SetRenderDrawBlendMode(renderer: PSDL_Renderer; blendMode: TSDL_BlendMode): Tbool; cdecl; external libSDL3;
function SDL_GetRenderDrawBlendMode(renderer: PSDL_Renderer; blendMode: PSDL_BlendMode): Tbool; cdecl; external libSDL3;
function SDL_RenderClear(renderer: PSDL_Renderer): Tbool; cdecl; external libSDL3;
function SDL_RenderPoint(renderer: PSDL_Renderer; x: single; y: single): Tbool; cdecl; external libSDL3;
function SDL_RenderPoints(renderer: PSDL_Renderer; points: PSDL_FPoint; Count: longint): Tbool; cdecl; external libSDL3;
function SDL_RenderLine(renderer: PSDL_Renderer; x1: single; y1: single; x2: single; y2: single): Tbool; cdecl; external libSDL3;
function SDL_RenderLines(renderer: PSDL_Renderer; points: PSDL_FPoint; Count: longint): Tbool; cdecl; external libSDL3;
function SDL_RenderRect(renderer: PSDL_Renderer; rect: PSDL_FRect): Tbool; cdecl; external libSDL3;
function SDL_RenderRects(renderer: PSDL_Renderer; rects: PSDL_FRect; Count: longint): Tbool; cdecl; external libSDL3;
function SDL_RenderFillRect(renderer: PSDL_Renderer; rect: PSDL_FRect): Tbool; cdecl; external libSDL3;
function SDL_RenderFillRects(renderer: PSDL_Renderer; rects: PSDL_FRect; Count: longint): Tbool; cdecl; external libSDL3;
function SDL_RenderTexture(renderer: PSDL_Renderer; texture: PSDL_Texture; srcrect: PSDL_FRect; dstrect: PSDL_FRect): Tbool; cdecl; external libSDL3;
function SDL_RenderTextureRotated(renderer: PSDL_Renderer; texture: PSDL_Texture; srcrect: PSDL_FRect; dstrect: PSDL_FRect; angle: Tdouble;
  center: PSDL_FPoint; flip: TSDL_FlipMode): Tbool; cdecl; external libSDL3;
function SDL_RenderTextureTiled(renderer: PSDL_Renderer; texture: PSDL_Texture; srcrect: PSDL_FRect; scale: single; dstrect: PSDL_FRect): Tbool; cdecl; external libSDL3;
function SDL_RenderTexture9Grid(renderer: PSDL_Renderer; texture: PSDL_Texture; srcrect: PSDL_FRect; left_width: single; right_width: single;
  top_height: single; bottom_height: single; scale: single; dstrect: PSDL_FRect): Tbool; cdecl; external libSDL3;
function SDL_RenderGeometry(renderer: PSDL_Renderer; texture: PSDL_Texture; vertices: PSDL_Vertex; num_vertices: longint; indices: Plongint;
  num_indices: longint): Tbool; cdecl; external libSDL3;
function SDL_RenderGeometryRaw(renderer: PSDL_Renderer; texture: PSDL_Texture; xy: Psingle; xy_stride: longint; color: PSDL_FColor;
  color_stride: longint; uv: Psingle; uv_stride: longint; num_vertices: longint; indices: pointer;
  num_indices: longint; size_indices: longint): Tbool; cdecl; external libSDL3;
function SDL_RenderReadPixels(renderer: PSDL_Renderer; rect: PSDL_Rect): PSDL_Surface; cdecl; external libSDL3;
function SDL_RenderPresent(renderer: PSDL_Renderer): Tbool; cdecl; external libSDL3;
procedure SDL_DestroyTexture(texture: PSDL_Texture); cdecl; external libSDL3;
procedure SDL_DestroyRenderer(renderer: PSDL_Renderer); cdecl; external libSDL3;
function SDL_FlushRenderer(renderer: PSDL_Renderer): Tbool; cdecl; external libSDL3;
function SDL_GetRenderMetalLayer(renderer: PSDL_Renderer): pointer; cdecl; external libSDL3;
function SDL_GetRenderMetalCommandEncoder(renderer: PSDL_Renderer): pointer; cdecl; external libSDL3;
function SDL_AddVulkanRenderSemaphores(renderer: PSDL_Renderer; wait_stage_mask: TUint32; wait_semaphore: TSint64; signal_semaphore: TSint64): Tbool; cdecl; external libSDL3;
function SDL_SetRenderVSync(renderer: PSDL_Renderer; vsync: longint): Tbool; cdecl; external libSDL3;

const
  SDL_RENDERER_VSYNC_DISABLED = 0;
  SDL_RENDERER_VSYNC_ADAPTIVE = -(1);

function SDL_GetRenderVSync(renderer: PSDL_Renderer; vsync: Plongint): Tbool; cdecl; external libSDL3;

const
  SDL_DEBUG_TEXT_FONT_CHARACTER_SIZE = 8;

function SDL_RenderDebugText(renderer: PSDL_Renderer; x, y: cfloat; str: PChar): Boolean; cdecl; external libSDL3;

  {$ENDIF read_interface}


{$IFDEF read_implementation}


{$ENDIF read_implementation}
